# Reservacion-de-citas-para-una-clinica

./: CMakeLists.txt  ccita.cpp  ccita.h  cdoctor.cpp  cdoctor.h  cdoctor.ui  cespecialidad.cpp  cespecialidad.h  citaform.cpp  citaform.h  citaform.ui  cpaciente.cpp  cpaciente.h  cpersona.cpp  cpersona.h  cprograma.cpp  cprograma.h  doctorform.cpp  doctorform.h  doctorform.ui  especialidadform.cpp  especialidadform.h  especialidadform.ui  pacienteform.cpp  pacienteform.h  pacienteform.ui  persona.cpp  persona.h  persona.ui  widget.cpp  widget.h  widget.ui
